--- a/source/freight_and_shipping.html.erb
+++ b/source/freight_and_shipping.html.erb
@@ -94,7 +94,7 @@
 				<div class="span12">
 					<br>
 					<img src="img/load_crate.jpg" alt="Wooden Crate" /><br><br><br>
-					<h5 id="spec_h5"><p><span>All products are sold F.O.B. our plant, Lenexa, Kansas unless other prepaid freight arrangements have been made and agreed to in advance.  Every effort will be made to ship via a specified freight carrier when freight charges are to be paid by our customer or other consignee.</span></p></h5>
+					<h5 id="spec_h5" class="span6"><p><span>All products are sold F.O.B. our plant, Lenexa, Kansas unless other prepaid freight arrangements have been made and agreed to in advance.  Every effort will be made to ship via a specified freight carrier when freight charges are to be paid by our customer or other consignee.</span></p></h5>
 					<br><br><br><br>
 				</div>
 			</div>
@@ -154,7 +154,7 @@
 		</div>
 	</section> -->
 
-	<footer>
+	<!-- <footer>
 		<div id="info">
 			<div class="container">
 				<div class="row-fluid">
@@ -219,7 +219,7 @@
 			</div>
 		</div>
 	</footer>
-
+ -->
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 </body>
