--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 			<div class="row-fluid">
-				<div class="span12">
+				<div class="span6" style="margin-left:auto;margin-right:auto;float:none;">
 					<p>For over fifteen years Quality Steel and Wire Products Co. has offered prompt service and high quality products serving the construction industry and a variety of original equipment manufacturers. Our objective is to provide a finished product that is consistent with all industry standards and compliant with design criteria specified by our customer base. Wire Forming and Metal Stamping is our specialty and we welcome all inquiries relating to metal fabrication.</p>
 				</div>
 			</div>
@@ -102,19 +102,21 @@
 				</div>
 			</div>
 			<div class="row-fluid">
-				<div class="span4">
-					<img src="img/blank_profile.png" alt="John Do" />
-					<h4>John Do</h4>
-					<h5>Chief Executive Office</h5>
-					<h4>
-						<i class="icon-twitter"></i>
-						<i class="icon-facebook"></i>
-						<i class="icon-linkedin"></i>
-						<i class="icon-github"></i>
-					</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum metus odio, viverra a luctus et, ornare in sapien. Praesent vulputate imperdiet mollis. Curabitur sed aliquam metus. Aliquam erat volutpat. In at libero vel nisl malesuada condimentum ac vel nisl.</p>
+			    <div class="span12">
+					<div class="span6" style="margin-left:auto;margin-right:auto;float:none;">
+						<img src="img/blank_profile.png" alt="John Do" />
+						<h4>John Do</h4>
+						<h5>Chief Executive Office</h5>
+						<h4>
+							<i class="icon-twitter"></i>
+							<i class="icon-facebook"></i>
+							<i class="icon-linkedin"></i>
+							<i class="icon-github"></i>
+						</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum metus odio, viverra a luctus et, ornare in sapien. Praesent vulputate imperdiet mollis. Curabitur sed aliquam metus. Aliquam erat volutpat. In at libero vel nisl malesuada condimentum ac vel nisl.</p>
+					</div>
 				</div>
-				<div class="span4">
+<!-- 				<div class="span4">
 					<img src="img/blank_profile.png" alt="HTML5 &amp; CSS3" />
 					<h4>Jane Do</h4>
 					<h5>Chief Financial Office</h5>
@@ -137,12 +139,13 @@
 						<i class="icon-github"></i>
 					</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum metus odio, viverra a luctus et, ornare in sapien. Praesent vulputate imperdiet mollis. Curabitur sed aliquam metus. Aliquam erat volutpat. In at libero vel nisl malesuada condimentum ac vel nisl.</p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
+	<div style="clear:both;height:300px;"></div>
 
-	<footer>
+<!-- 	<footer>
 		<div id="info">
 			<div class="container">
 				<div class="row-fluid">
@@ -206,7 +209,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
