--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -106,7 +106,7 @@
 						</fieldset>
 					</form>
 				</div>
-				<div class="span6">
+				<!-- <div class="span6">
 					<h2>Visit us</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum metus odio, viverra a luctus et, ornare in sapien. Praesent vulputate imperdiet mollis. Curabitur sed aliquam metus. Aliquam erat volutpat. In at libero vel nisl malesuada condimentum ac vel nisl. Suspendisse vulputate sollicitudin orci, at hendrerit lorem scelerisque id.</p>
 					<div class="row-fluid">
@@ -118,12 +118,12 @@
 							</address>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
 
-	<footer>
+<!-- 	<footer>
 		<div id="info">
 			<div class="container">
 				<div class="row-fluid">
@@ -187,7 +187,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
