--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -79,7 +79,7 @@
 		</div>
 	</section>
 
-	<section id="shoutbox">
+<!-- 	<section id="shoutbox">
 		<div class="container">
 			<div class="row-fluid">
 				<div class="span12">
@@ -176,9 +176,9 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<footer>
+	<!-- <footer>
 		<div id="info">
 			<div class="container">
 				<div class="row-fluid">
@@ -242,7 +242,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script type="text/javascript" src="javascripts/js/bootstrap.min.js"></script>
 
