--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -43,116 +43,111 @@
     <%= javascript_include_tag  "all" %>
   </head>
 
-  <body class="<%= page_classes %>">
+  <body style="width:100%;height:100%;">
 
-  <header id="header">
-    <div id="colors">
-      <div class="color1 <%= 'active' if true %> "></div>
-      <div class="color2"></div>
-      <div class="color3"></div>
-      <div class="color4"></div>
-      <div class="color5"></div>
-      <div class="color1"></div>
-      <div class="color2"></div>
-      <div class="color3"></div>
-      <div class="color4"></div>
-      <div class="color5"></div>
-    </div>
-    <div class="container">
-      <div class="row-fluid">
-        <div id="menu" class="navbar">
-            <div class="navbar-inner">
-              <div id="logo">
-                <img src="http://placehold.it/40x40" class="img_change"/>
-              <h1>QSWP</h1>
-            </div>
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <div class="nav-collapse collapse navbar-responsive-collapse">
-              <ul id="nav">
-                <li><a class="color1" href="/../../index.html">HOME</a></li>
-                <li><a class="color2" href="/../../about.html">ABOUT</a></li>
-                <li><a class="color3 active" href="/../../products.html">PRODUCTS</a></li>
-                <li><a class="color4" href="/../../materials_and_capacities.html">MATERIALS AND CAPACITIES</a></li>
-                <li><a class="color5" href="/../../freight_and_shipping.html">FREIGHT AND SHIPPING</a></li>
-                <li><a class="color1" href="/../../contact.html">CONTACT</a></li>
-              </ul>
+    <header id="header">
+      <div id="colors">
+        <div class="color1 <%= 'active' if true %> "></div>
+        <div class="color2"></div>
+        <div class="color3"></div>
+        <div class="color4"></div>
+        <div class="color5"></div>
+        <div class="color1"></div>
+        <div class="color2"></div>
+        <div class="color3"></div>
+        <div class="color4"></div>
+        <div class="color5"></div>
+      </div>
+      <div class="container">
+        <div class="row-fluid">
+          <div id="menu" class="navbar">
+              <div class="navbar-inner">
+                <div id="logo">
+                  <img src="http://placehold.it/40x40" class="img_change"/>
+                <h1>QSWP</h1>
+              </div>
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+              <div class="nav-collapse collapse navbar-responsive-collapse">
+                <ul id="nav">
+                  <li><a class="color1" href="/../../index.html">HOME</a></li>
+                  <li><a class="color2" href="/../../about.html">ABOUT</a></li>
+                  <li><a class="color3 active" href="/../../products.html">PRODUCTS</a></li>
+                  <li><a class="color4" href="/../../materials_and_capacities.html">MATERIALS AND CAPACITIES</a></li>
+                  <li><a class="color5" href="/../../freight_and_shipping.html">FREIGHT AND SHIPPING</a></li>
+                  <li><a class="color1" href="/../../contact.html">CONTACT</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
-
+    </header>
 
     <%= yield %>
 
-
-
-
-  <footer id="pp4" class="span12" style="width:100%;">
-    <div id="info">
-      <div class="container row-fluid">
-        <div id="pp5" class="span6" style="margin-left:-25px;">
-          <div id="pp6" style="float:right;text-align:left;">
-            <h4>Quick links</h4>
-            <ul id="quicklinks">
-              <li><a href="/../../index.html">HOME</a></li>
-              <li><a href="/../../about.html">ABOUT</a></li>
-              <li><a class="active" href="/../../products.html">PRODUCTS</a></li>
-              <li><a href="/../../materials_and_capacities.html">MATERIALS AND CAPACITIES</a></li>
-              <li><a href="/../../freight_and_shipping.html">FREIGHT AND SHIPPING</a></li>
-              <li><a href="/../../contact.html">CONTACT</a></li>
-            </ul> 
-          </div>      
-        </div>  
-        <div class="span6">   
-          <div id="pp7" style="float:left;text-align:left;margin-top:-1px;">
-            <h4>Contact us</h4>
-            <address>
-              <strong>QSWP</strong><br>
-              9802 Widmer Rd.<br>
-              Lenexa, KS 66215<br>
-              <abbr title="Phone">P:</abbr> (913) 888-2929<br>
-              <abbr title="Fax">F:</abbr> (913) 888-4405
-            </address>
+    <footer id="pp4" style="width:100%;position:fixed;bottom:0;clear:both;">
+      <div id="info">
+        <div class="container row-fluid">
+          <div id="pp5" class="span6" style="margin-left:-25px;">
+            <div id="pp6" style="float:right;text-align:left;">
+              <h4>Quick links</h4>
+              <ul id="quicklinks">
+                <li><a href="/../../index.html">HOME</a></li>
+                <li><a href="/../../about.html">ABOUT</a></li>
+                <li><a class="active" href="/../../products.html">PRODUCTS</a></li>
+                <li><a href="/../../materials_and_capacities.html">MATERIALS AND CAPACITIES</a></li>
+                <li><a href="/../../freight_and_shipping.html">FREIGHT AND SHIPPING</a></li>
+                <li><a href="/../../contact.html">CONTACT</a></li>
+              </ul> 
+            </div>      
+          </div>  
+          <div class="span6">   
+            <div id="pp7" style="float:left;text-align:left;margin-top:-1px;">
+              <h4>Contact us</h4>
               <address>
-              <strong>Email us:</strong><br>
-              <a href="mailto:info@company.tld">info@qswp.com</a>
-            </address>  
-          </div>        
+                <strong>QSWP</strong><br>
+                9802 Widmer Rd.<br>
+                Lenexa, KS 66215<br>
+                <abbr title="Phone">P:</abbr> (913) 888-2929<br>
+                <abbr title="Fax">F:</abbr> (913) 888-4405
+              </address>
+                <address>
+                <strong>Email us:</strong><br>
+                <a href="mailto:info@company.tld">info@qswp.com</a>
+              </address>  
+            </div>        
+          </div>      
         </div>      
-      </div>      
-    </div>
-    <div id="footer" class="span12" style="width:100%;">
-      <div class="container">
-        <div class="row-fluid">
-          <!-- <div class="span6">
-            <p>Copyright &copy; QSWP</p>
-          </div> -->
-          <div id="social" class="span6">
-            <i class="icon-twitter"></i>
-            <i class="icon-facebook"></i>
-            <i class="icon-linkedin"></i>
-            <i class="icon-github"></i>
+      </div>
+      <div id="footer" style="width:100%;">
+        <div class="container">
+          <div class="row-fluid">
+            <!-- <div class="span6">
+              <p>Copyright &copy; QSWP</p>
+            </div> -->
+            <div id="social" class="span6">
+              <i class="icon-twitter"></i>
+              <i class="icon-facebook"></i>
+              <i class="icon-linkedin"></i>
+              <i class="icon-github"></i>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
-  <script type="text/javascript">
-    $(function() {
-      $('.gallery > div').hoverdir( {
-        hoverDelay  : 75
-      } );
-    });
-  </script>
-
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('.gallery > div').hoverdir( {
+          hoverDelay  : 75
+        } );
+      });
+    </script>
   </body>
 </html>
