--- a/source/materials_and_capacities.html.erb
+++ b/source/materials_and_capacities.html.erb
@@ -79,7 +79,7 @@
 		</div>
 	</section>
 
-	<section id="page">
+	<!-- <section id="page">
 		<div class="container">
 			<div id="blog" class="row-fluid">
 				<div class="span10">
@@ -171,9 +171,9 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<footer>
+<!-- 	<footer>
 		<div id="info">
 			<div class="container">
 				<div class="row-fluid">
@@ -237,7 +237,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
