--- a/source/products.html.erb
+++ b/source/products.html.erb
@@ -98,10 +98,10 @@
 
 
 
-</div>
+
 		<div class="container">
-			<div id="sect1" class="row-fluid">
-				<div id="portfolio" class="span12">
+			<div class="row-fluid">
+				<div id="portfolio" class="span3">
 					<div class="row-fluid gallery thumbnails">			
 						<div class="span4">
 							<a href="#">
@@ -111,20 +111,167 @@
 						</div>	
 					</div>
 				</div>
-			</div>
-			<div id="sect2" class="row-fluid">
-				<div id="portfolio" class="span12">
+				<div id="portfolio" class="span3">
 					<div class="row-fluid gallery thumbnails">			
 						<div class="span4">
 							<a href="#">
 								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
-								<div><span>Rebar Chairs And Supports For <br>Concrete Slabs And Footings</span></div>
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
 							</a>
 						</div>	
 					</div>
 				</div>
-			</div>			
-		</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>	
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>											
+			</div>		
+			<div class="row-fluid">
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>	
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>											
+			</div>
+			<div class="row-fluid">
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>	
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>											
+			</div>
+			<div class="row-fluid">
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>	
+				<div id="portfolio" class="span3">
+					<div class="row-fluid gallery thumbnails">			
+						<div class="span4">
+							<a href="#">
+								<img src="http://placehold.it/600x300" alt="" class="thumbnail" />
+								<div><span>Anchors and Ties For Masonry Construction</span></div>
+							</a>
+						</div>	
+					</div>
+				</div>											
+			</div>							
+		</div>	
+		
+
+			
 <!-- 		<div class="pagination">
 			<ul>
 				<li><a id="Prevbtn" href="#">Prev</a></li>
@@ -135,7 +282,7 @@
 		</div> -->
 	</section>
 
-	<footer>
+<!-- 	<footer>
 		<div id="info">
 			<div class="container">
 				<div class="row-fluid">
@@ -199,7 +346,7 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery.hoverdir.js"></script>
